// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`breadcrumbs > click on middle item 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <nav
      aria-label="breadcrumb"
    >
      <ol
        class="styles__amt5xm0"
      >
        <li
          class="styles__14e7tr4 styles__14e7tr7"
        >
          <a
            class="styles__14e7tr2 styles__1pc546m0 styles_prominence_stronger__1pc546m5 styles_sentiment_info__1pc546m2 styles_oneLine_false__1pc546m8 styles_variant_bodySmallStrong__1pc546ma styles_type_standalone__1pc546md styles_undefined_compound_6__1pc546mk styles__1pc546mn"
            data-variant="standalone"
            href="/step1"
          >
            Step 1
          </a>
        </li>
        <li
          class="styles__14e7tr4 styles_clickable_true__14e7tr5 styles__14e7tr7"
        >
          <button
            class="styles__14e7tr3 styles__8xt08s0 styles_disabled_false__8xt08s1 styles_fullWidth_false__8xt08s3 styles_sentiment_neutral__8xt08s8 styles_size_small__8xt08sg styles_variant_ghost__8xt08sj styles_undefined_compound_24__8xt08s19"
            type="button"
          >
            Step 2
          </button>
        </li>
        <li
          class="styles__14e7tr4 styles__14e7tr7"
        >
          <div
            class="styles__14e7tr3 styles__14e7tr6 style__1do42ls0 style_prominence_default__1do42ls4 style_variant_bodySmallStrong__1do42lsl style_undefined_compound_0__1do42ls1a"
          >
            Step 3
          </div>
        </li>
      </ol>
    </nav>
  </div>
</DocumentFragment>
`;

exports[`breadcrumbs > last item should no be clickable 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <nav
      aria-label="breadcrumb"
    >
      <ol
        class="styles__amt5xm0"
      >
        <li
          class="styles__14e7tr4 styles__14e7tr7"
        >
          <a
            class="styles__14e7tr2 styles__1pc546m0 styles_prominence_stronger__1pc546m5 styles_sentiment_info__1pc546m2 styles_oneLine_false__1pc546m8 styles_variant_bodySmallStrong__1pc546ma styles_type_standalone__1pc546md styles_undefined_compound_6__1pc546mk styles__1pc546mn"
            data-variant="standalone"
            href="/step1"
          >
            Step 1
          </a>
        </li>
        <li
          class="styles__14e7tr4 styles__14e7tr7"
        >
          <a
            class="styles__14e7tr2 styles__1pc546m0 styles_prominence_stronger__1pc546m5 styles_sentiment_info__1pc546m2 styles_oneLine_false__1pc546m8 styles_variant_bodySmallStrong__1pc546ma styles_type_standalone__1pc546md styles_undefined_compound_6__1pc546mk styles__1pc546mn"
            data-variant="standalone"
            href="/step1/step2"
          >
            I'm a very long long long long long long long long long long long long step
          </a>
        </li>
        <li
          class="styles__14e7tr4 styles_clickable_true__14e7tr5 styles__14e7tr7"
        >
          <button
            class="styles__14e7tr3 styles__8xt08s0 styles_disabled_false__8xt08s1 styles_fullWidth_false__8xt08s3 styles_sentiment_neutral__8xt08s8 styles_size_small__8xt08sg styles_variant_ghost__8xt08sj styles_undefined_compound_24__8xt08s19"
            type="button"
          >
            Step 3
          </button>
        </li>
      </ol>
    </nav>
  </div>
</DocumentFragment>
`;

exports[`breadcrumbs > renders correctly with default values 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <nav
      aria-label="breadcrumb"
    >
      <ol
        class="styles__amt5xm0"
      >
        <li
          class="styles__14e7tr4 styles__14e7tr7"
        >
          <a
            class="styles__14e7tr2 styles__1pc546m0 styles_prominence_stronger__1pc546m5 styles_sentiment_info__1pc546m2 styles_oneLine_false__1pc546m8 styles_variant_bodySmallStrong__1pc546ma styles_type_standalone__1pc546md styles_undefined_compound_6__1pc546mk styles__1pc546mn"
            data-variant="standalone"
            href="/step1"
          >
            Step 1
          </a>
        </li>
        <li
          class="styles__14e7tr4 styles__14e7tr7"
        >
          <a
            class="styles__14e7tr2 styles__1pc546m0 styles_prominence_stronger__1pc546m5 styles_sentiment_info__1pc546m2 styles_oneLine_false__1pc546m8 styles_variant_bodySmallStrong__1pc546ma styles_type_standalone__1pc546md styles_undefined_compound_6__1pc546mk styles__1pc546mn"
            data-variant="standalone"
            href="/step1/step2"
          >
            I'm a very long long long long long long long long long long long long step
          </a>
        </li>
        <li
          class="styles__14e7tr4 styles__14e7tr7"
        >
          <div
            class="styles__14e7tr3 styles__14e7tr6 style__1do42ls0 style_prominence_default__1do42ls4 style_variant_bodySmallStrong__1do42lsl style_undefined_compound_0__1do42ls1a"
          >
            Step 3
          </div>
        </li>
      </ol>
    </nav>
  </div>
</DocumentFragment>
`;

exports[`breadcrumbs > renders correctly with invalid child 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <nav
      aria-label="breadcrumb"
    >
      <ol
        class="styles__amt5xm0"
      >
        Invalid child
      </ol>
    </nav>
  </div>
</DocumentFragment>
`;

exports[`breadcrumbs > renders correctly with minWidth and maxWidth 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <nav
      aria-label="breadcrumb"
    >
      <ol
        class="styles__amt5xm0"
      >
        <li
          class="styles__14e7tr4 styles__14e7tr7"
        >
          <a
            class="styles__14e7tr2 styles__1pc546m0 styles_prominence_stronger__1pc546m5 styles_sentiment_info__1pc546m2 styles_oneLine_false__1pc546m8 styles_variant_bodySmallStrong__1pc546ma styles_type_standalone__1pc546md styles_undefined_compound_6__1pc546mk styles__1pc546mn"
            data-variant="standalone"
            href="/step1"
          >
            Step 1
          </a>
        </li>
        <li
          class="styles__14e7tr4 styles__14e7tr7"
          style="--_14e7tr1: 100px; --_14e7tr0: 200px;"
        >
          <a
            class="styles__14e7tr2 styles__1pc546m0 styles_prominence_stronger__1pc546m5 styles_sentiment_info__1pc546m2 styles_oneLine_false__1pc546m8 styles_variant_bodySmallStrong__1pc546ma styles_type_standalone__1pc546md styles_undefined_compound_6__1pc546mk styles__1pc546mn"
            data-variant="standalone"
            href="/step1/step2"
          >
            I'm a very long long long long long long long long long long long long step
          </a>
        </li>
        <li
          class="styles__14e7tr4 styles__14e7tr7"
        >
          <div
            class="styles__14e7tr3 styles__14e7tr6 style__1do42ls0 style_prominence_default__1do42ls4 style_variant_bodySmallStrong__1do42lsl style_undefined_compound_0__1do42ls1a"
          >
            Step 3
          </div>
        </li>
      </ol>
    </nav>
  </div>
</DocumentFragment>
`;

exports[`breadcrumbs > should render with custom render prop 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <nav
      aria-label="breadcrumb"
    >
      <ol
        class="styles__amt5xm0"
      >
        <li
          class="styles__14e7tr4 styles__14e7tr7"
        >
          <a
            class="styles__14e7tr2 styles__1pc546m0 styles_prominence_stronger__1pc546m5 styles_sentiment_info__1pc546m2 styles_oneLine_false__1pc546m8 styles_variant_bodySmallStrong__1pc546ma styles_type_standalone__1pc546md styles_undefined_compound_6__1pc546mk styles__1pc546mn"
            data-variant="standalone"
            href="/step1"
          >
            Step 1
          </a>
        </li>
        <li
          class="styles__14e7tr4 styles__14e7tr7"
        >
          <a
            class="styles__14e7tr2 styles__1pc546m0 styles_prominence_stronger__1pc546m5 styles_sentiment_info__1pc546m2 styles_oneLine_false__1pc546m8 styles_variant_bodySmallStrong__1pc546ma styles_type_standalone__1pc546md styles_undefined_compound_6__1pc546mk styles__1pc546mn"
            data-custom-link="true"
            data-variant="standalone"
            href="/custom"
          >
            Custom Link
          </a>
        </li>
        <li
          class="styles__14e7tr4 styles__14e7tr7"
        >
          <div
            class="styles__14e7tr3 styles__14e7tr6 style__1do42ls0 style_prominence_default__1do42ls4 style_variant_bodySmallStrong__1do42lsl style_undefined_compound_0__1do42ls1a"
          >
            Step 3
          </div>
        </li>
      </ol>
    </nav>
  </div>
</DocumentFragment>
`;
